--- a/main.ui
+++ b/main.ui
@@ -110,7 +110,7 @@
     <item>
      <widget class="QTableWidget" name="table">
       <property name="columnCount">
-       <number>3</number>
+       <number>4</number>
       </property>
       <attribute name="verticalHeaderVisible">
        <bool>true</bool>
@@ -128,6 +128,11 @@
       <column>
        <property name="text">
         <string>Department</string>
+       </property>
+      </column>
+      <column>
+       <property name="text">
+        <string>Time</string>
        </property>
       </column>
      </widget>
